--- a/fsh-generated/resources/StructureDefinition-an-gleason.json
+++ b/fsh-generated/resources/StructureDefinition-an-gleason.json
@@ -118,6 +118,11 @@
         "id": "Observation.value[x]",
         "path": "Observation.value[x]",
         "max": "0",
+        "type": [
+          {
+            "code": "integer"
+          }
+        ],
         "mustSupport": true
       },
       {
